# rent-vs-sell

./: .gitignore  CLAUDE.md  Makefile  README.md  assumptions.py  model.py  pyproject.toml  render.py
docs/: decision-framework-explained.md  decision-framework.md  sf-rental-tax-reference.md
properties/: harold-ave.toml  test-fixture.toml
scripts/: pre-commit  render_explainer.py  sensitivity.py  snapshot.py
static/: model.js
templates/: base.html  interpretation.html  report.html
tests/: test_js_model.py  test_metamorphic.py  test_model.py  test_properties.py
tests/golden/: harold-ave.json  test-fixture.json
